# pinocchio-tutorials

./: .gitlab-ci.yml  CMakeLists.txt  README.md
cicd/: Dockerfile.build  Dockerfile.deploy  update.sh
tp0_install/: install.sh  main.asciidoc  viewer_unittest.py
tp1_directgeom/: main.asciidoc  tp1.py
tp2_invgeom/: main.asciidoc  q10_parallelik.py  q1q2q3_optim_translation.py  q4q5_optim_redundancy.py  q6_optim_placement.py  q7q8_optim_quaternion.py  ur5x4.py
tp3_invkine/: example_mobilerobot.py  main.asciidoc  mobilerobot.py  tp3.py
tp4_dyn/: example_hand.py  example_qp.py  main.asciidoc  q1q2q3_freesimu.py  q4q5_contactsimu.py  robot_hand.py
tp5_planner/: example_collision.py  graph.py  main.asciidoc  planner.py  prm_display.py
tp6_wpg/: example_factor.py  example_foot_steps.py  example_matplotlib.py  example_romeo.py  example_scipy.py  factor.py  foot_steps.py  main.asciidoc
tp7_learn/: display.py  main.asciidoc
